--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 <!-- /* ============================== start features =============================== */  -->
-<section class="features">
+=<section class="features">
     <div class="container">
         <div class="features-item">
             <img src="img/features1.png" alt="">
